<resources>
    <string name="app_name">Story Media</string>
    <string name="sit_down_human">sit down human</string>
    <string name="let_s_join_us">Let\'s Join Us</string>
    <string name="register_jargon">We provide you with the best way to share your story with your social friends</string>

    <!-- Edit Text Place Holder -->
    <string name="input_your_password_here">Input your password here …</string>
    <string name="input_your_email_here">Input your email here …</string>
    <string name="input_the_description_here">Input the description here …</string>
    <string name="input_your_name_here">Input your name here …</string>
    <string name="story_app_logo">Story App Logo</string>
    <string name="story_media">Story Media</string>

    <!-- Other -->
    <string name="email">Email</string>
    <string name="join_now">Join Now</string>
    <string name="sign_in">Sign In</string>
    <string name="form_could_not_be_empty">%1s form could not be empty</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="email_duplicate">Please use other email</string>
    <string name="let_s_complete_the_form">Let\'s Complete The Form</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="password_invalid">Password character should be >6</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="walk_human">walk human</string>
    <string name="pass_the_credentials">Pass The Credentials</string>
    <string name="welcome_user">Welcome %1s</string>
    <string name="log_out">log out</string>
    <string name="story_list">Story List</string>
    <string name="profile_icon">profile icon</string>
    <string name="story_photo">story photo</string>
    <string name="story_detail">Story Detail</string>
    <string name="description">Description</string>
    <string name="add_photo">Add photo</string>
    <string name="max_size_upload_1mb">Max size upload 1Mb</string>
    <string name="gallery_icon">gallery icon</string>
    <string name="camera_icon">Camera icon</string>
    <string name="rotate_icon">rotate icon</string>
    <string name="image_result">image result</string>
    <string name="success_upload_an_image">Story has been uploaded successfully.</string>
    <string name="error_when_uploading_image">There is an error when uploading image to Api.</string>
    <string name="empty_photo_and_desc">You have to add photo, location, and description first!</string>
    <string name="failed_fetching_api">Failed to fetching Api. Please Try Again.</string>
    <string name="list_is_empty_try_again_later">List is empty, try again later.</string>
    <string name="login_success">Login Success!</string>
    <string name="login_failed">Login Failed!</string>
    <string name="register_success">Register Success!</string>
    <string name="register_failed">Register Failed!</string>
    <string name="invalid_credentials">Invalid Credentials!</string>
    <string name="success_taking_photo">Success taking the photo.</string>
    <string name="failed_taking_photo">Failed when taking the photo.</string>
    <string name="camera_need_permission">Camera need permission.</string>
    <string name="could_not_load_camera">Could not load the camera</string>
    <string name="retry">Retry</string>
    <string name="lat_lon">%1s, %2s</string>
    <string name="map_icon">Map icon</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
    <string name="click_here_to_select_your_location">Click icon to select your location</string>
</resources>