<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_accent"
    app:layoutDescription="@xml/fragment_login_scene"
    tools:context=".ui.credential.login.LoginFragment">

    <ImageView
        android:id="@+id/ivHumanWalk"
        android:layout_width="180dp"
        android:layout_height="199dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/walk_human"
        android:src="@drawable/ic_human_walk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPassCredential"
        style="@style/SemiBold24Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="48dp"
        android:gravity="start"
        android:text="@string/pass_the_credentials"
        android:textColor="@color/light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivHumanWalk" />

    <TextView
        android:id="@+id/tvLabelEmail"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/etEmail"
        android:text="@string/email"
        android:textColor="@color/light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassCredential" />

    <space.iqbalsyafiq.storymedia.component.MyEditText
        android:id="@+id/etEmail"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="7dp"
        android:hint="@string/input_your_email_here"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEmail" />

    <TextView
        android:id="@+id/tvLabelPassword"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/etPassword"
        android:text="@string/password"
        android:textColor="@color/light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <space.iqbalsyafiq.storymedia.component.MyEditText
        android:id="@+id/etPassword"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="7dp"
        android:hint="@string/input_your_password_here"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPassword" />

    <Button
        android:id="@+id/btnSignIn"
        style="@style/SemiBold18Sp"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_radius_8dp_stroke"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/light_primary"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvBack"
        style="@style/SemiBold18Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/back"
        android:textColor="@color/light_primary"
        app:layout_constraintEnd_toEndOf="@id/btnSignIn"
        app:layout_constraintStart_toStartOf="@id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

</androidx.constraintlayout.motion.widget.MotionLayout>