<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_accent"
    app:layoutDescription="@xml/fragment_submit_sign_up_scene"
    tools:context=".ui.credential.signup.SubmitSignUpFragment">

    <TextView
        android:id="@+id/tvJargon"
        style="@style/SemiBold24Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="18dp"
        android:text="@string/let_s_complete_the_form"
        android:textColor="@color/light_primary"
        app:layout_constraintBottom_toBottomOf="@id/ivHumanSitDown"
        app:layout_constraintEnd_toStartOf="@id/ivHumanSitDown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivHumanSitDown" />

    <ImageView
        android:id="@+id/ivHumanSitDown"
        android:layout_width="91dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/sit_down_human"
        android:src="@drawable/ic_human_sitdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nvScrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivHumanSitDown"
        app:layout_constraintStart_toStartOf="@id/tvJargon"
        app:layout_constraintTop_toBottomOf="@id/ivHumanSitDown">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <!-- Email -->
                <TextView
                    style="@style/Medium14Sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:labelFor="@id/etEmail"
                    android:textColor="@color/light_primary" />

                <space.iqbalsyafiq.storymedia.component.MyEditText
                    android:id="@+id/etEmail"
                    style="@style/Medium14Sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/input_your_email_here"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp" />

                <!-- Full Name -->
                <TextView
                    style="@style/Medium14Sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/full_name"
                    android:labelFor="@id/etFullName"
                    android:textColor="@color/light_primary" />

                <space.iqbalsyafiq.storymedia.component.MyEditText
                    android:id="@+id/etFullName"
                    style="@style/Medium14Sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/input_your_name_here"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp" />

                <!-- Password -->
                <TextView
                    style="@style/Medium14Sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/password"
                    android:labelFor="@id/etPassword"
                    android:textColor="@color/light_primary" />

                <space.iqbalsyafiq.storymedia.component.MyEditText
                    android:id="@+id/etPassword"
                    style="@style/Medium14Sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/input_your_password_here"
                    android:inputType="textPassword"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressLoading"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/light_primary"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radius_8dp_stroke"
                    android:text="@string/sign_up"
                    style="@style/SemiBold18Sp"
                    android:textColor="@color/light_primary"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/tvBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    style="@style/SemiBold18Sp"
                    android:textColor="@color/light_primary"
                    android:text="@string/back" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>