<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.CreateStoryFragment">

    <TextView
        android:id="@+id/tvDetailStory"
        style="@style/SemiBold24Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="55dp"
        android:text="@string/story_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailStory">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivStoryImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/story_photo"
                android:scaleType="fitXY"
                android:src="@drawable/photo_dummy" />

            <!-- Full Name -->
            <TextView
                style="@style/Medium14Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/etFullName"
                android:text="@string/full_name" />

            <space.iqbalsyafiq.storymedia.component.MyEditText
                android:id="@+id/etFullName"
                style="@style/Medium14Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:enabled="false"
                android:inputType="textPersonName"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                tools:text="Iqbal Shafiq Rozaan" />

            <!-- Description -->
            <TextView
                style="@style/Medium14Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/etDescription"
                android:text="@string/description" />

            <space.iqbalsyafiq.storymedia.component.MyEditText
                android:id="@+id/etDescription"
                style="@style/Medium14Sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:enabled="false"
                android:hint="@string/input_the_description_here"
                android:inputType="textMultiLine"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/log_out"
        android:src="@drawable/ic_back"
        app:backgroundTint="@color/dark_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>