<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewContainer"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="@drawable/bg_gradient_vertical_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_weight="1"
        android:contentDescription="@string/gallery_icon"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewContainer" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnTakePhoto"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_weight="2"
        android:backgroundTint="@color/light_primary"
        android:contentDescription="@string/camera_icon"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivRotate"
        app:layout_constraintStart_toEndOf="@id/ivGallery"
        app:layout_constraintTop_toTopOf="@id/viewContainer" />

    <ImageView
        android:id="@+id/ivRotate"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="48dp"
        android:layout_weight="1"
        android:contentDescription="@string/rotate_icon"
        android:src="@drawable/ic_rotate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>